# MySVN

./: .gitignore  README.md  idei.txt
my_svn/: Cargo.toml
my_svn/.svn/: objects.db
my_svn/.svn/branches/: main
my_svn/src/: main.rs  my_error.rs  repository.rs  restore.rs  run.rs  structures.rs  test.rs
